--- a/_data/main_info.yaml
+++ b/_data/main_info.yaml
@@ -1,4 +1,4 @@
-name: "Jaeseok Yoon"
+name: "Seunghyun Hwang"
 title: "M.S. Student at KAIST"
 email: "jake.yoon@kaist.ac.kr"
 profile_pic: "/assets/profile-pics/profile.jpg"
