--- a/_data/main_info.yaml
+++ b/_data/main_info.yaml
@@ -1,11 +1,11 @@
 name: "Seunghyun Hwang"
 title: "M.S. Student at KAIST"
-email: "jake.yoon@kaist.ac.kr"
+email: "steven1971@kaist.ac.kr"
 profile_pic: "/assets/profile-pics/profile.jpg"
 #twitter: "https://twitter.com/yjaeseok"
 #cv: "assets/cv/CV.pdf"
 #semantic_scholar: "https://www.semanticscholar.org/author/2000091730"
-google_scholar: "https://scholar.google.com/citations?user=oIPnG_QAAAAJ"
-linkedin: "https://kr.linkedin.com/in/yjaeseok"
-github: "https://github.com/yjaeseok"
+#google_scholar: "https://scholar.google.com/citations?user=oIPnG_QAAAAJ"
+#linkedin: "https://kr.linkedin.com/in/yjaeseok"
+github: "https://github.com/steven991201"
 #google_analystics_tracking_id: 'G-5TBPSZ9NWF'
