--- a/_data/experience.yaml
+++ b/_data/experience.yaml
@@ -5,25 +5,13 @@ experiences:
   subtitle: "Working on adaptation of large LMs"
   category: "school"
   
-- place: "Samsung Electronics - Mobile eXperience"
-  time: "Feb. 2015 - Present"
-  title: "Staff Engineer (CL3)"
-  subtitle: ""
+- place: "NCSoft"
+  time: "Oct. 2020 - Feb. 2021"
+  title: "NCsoft Language AI Lab Narrative Team"
+  subtitle: "Intern"
   category: "work"
 
-- place: "Korea Electronics Technology Institute"
-  time: "May. 2014 - Nov. 2014"
-  title: "Researcher"
-  subtitle: "WFMS (Wind Farm Management System), VPP (Virtual Power Plant)"
-  category: "work"
-
-- place: "Yonhap Infomax"
-  time: "Jan. 2010 - Mar. 2012"
-  title: "Software Engineer / Institute of Financial Engineering"
-  subtitle: "Alternative military service"
-  category: "work"
-
-- place: "Soongsil University"
-  time: "Mar. 2007 - Feb. 2015"
+- place: "KAIST"
+  time: "Mar. 2017 - Feb. 2022"
   title: "B.S. in Computer Science"
   category: "school"
