--- a/_data/publications.yaml
+++ b/_data/publications.yaml
@@ -4,27 +4,10 @@ papers:
 
   - title: "Adapting Text-based Dialogue State Tracker for Spoken Dialogues"
     #image: "/assets/publications/2022_emnlp/ropt.png"
-    authors: "<b><u>Jaeseok Yoon*</u></b>, Seunghyun Hwang*, Ran Han, Jeonguk Bang, Kee-Eung Kim"
+    authors: "Jaeseok Yoon*, <b><u>Seunghyun Hwang*</u></b>, Ran Han, Jeonguk Bang, Kee-Eung Kim"
     venue: "SIGDIAL x INLG 2023 Worshop: Dialogue State Tracking Challenge 11"
     #paper_pdf: "https://arxiv.org/abs/2210.03029"
     #code: "https://github.com/seonghyeonye/RoSPr"
     #twitter: "https://twitter.com/SeonghyeonYe/status/1578239880102281221?s=20&t=SEcE7zooqxlba79QZv6D1A"
     selected: y
 
-  - title: "DOWELL: Dwell-time Based Smartphone Control Solution for People with Upper Limb Disabilities"
-    #image: "/assets/publications/2022_emnlp/ropt.png"
-    authors: "Hyunjin Ahn, <b><u>Jaeseok Yoon</u></b>, Gulji Chung, Kibum Kim, Jiyeon Ma, Hyunbin Choi, Donguk Jung, Joongseek Lee"
-    venue: "ACM CHI2015"
-    paper_pdf: "https://dl.acm.org/doi/pdf/10.1145/2702613.2732862"
-    #code: "https://github.com/seonghyeonye/RoSPr"
-    #twitter: "https://twitter.com/SeonghyeonYe/status/1578239880102281221?s=20&t=SEcE7zooqxlba79QZv6D1A"
-    selected: y
-  
-  - title: "Smartphone control solution based on Dwell for people with upper limb disorders"
-    #image: "/assets/publications/2022_emnlp/ropt.png"
-    authors: "Hyunjin Ahn, <b><u>Jaeseok Yoon</u></b>, Kibum Kim, Gulji Chung, Hyunbin Choi, Jiyeon Ma"
-    venue: "HCIK 2015"
-    paper_pdf: "https://www.dbpia.co.kr/pdf/pdfView.do?nodeId=NODE06139527"
-    #code: "https://github.com/seonghyeonye/RoSPr"
-    #twitter: "https://twitter.com/SeonghyeonYe/status/1578239880102281221?s=20&t=SEcE7zooqxlba79QZv6D1A"
-    selected: y
